--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/Weather-Main-Scene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/Weather-Main-Scene.fxml
@@ -3,25 +3,26 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f0f8fc;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
    <right>
-      <Pane prefHeight="400.0" prefWidth="240.0" BorderPane.alignment="CENTER">
+      <Pane prefHeight="400.0" prefWidth="240.0" style="-fx-background-color: #0f173f;" BorderPane.alignment="CENTER">
          <children>
-            <Pane layoutX="41.0" layoutY="84.0" prefHeight="192.0" prefWidth="159.0">
+            <Pane layoutX="3.0" layoutY="84.0" prefHeight="237.0" prefWidth="237.0">
                <children>
-                  <Label fx:id="degree" alignment="CENTER_RIGHT" layoutX="26.0" layoutY="52.0" prefHeight="63.0" prefWidth="61.0">
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="87.0" layoutY="14.0" prefHeight="17.0" prefWidth="64.0" text="TODAY" textAlignment="CENTER" textFill="#eeeeee" />
+                  <Label fx:id="feelsLike" layoutX="14.0" layoutY="192.0" prefHeight="17.0" prefWidth="90.0" text="Feels like" textFill="#eeeeee" />
+                  <Label fx:id="sunsetHour" layoutX="142.0" layoutY="192.0" prefHeight="17.0" prefWidth="81.0" text="Sunset" textFill="#eeeeee" />
+                  <Label fx:id="date" alignment="CENTER" layoutX="42.0" layoutY="31.0" prefHeight="17.0" prefWidth="155.0" textFill="#eeeeee" />
+                  <Label fx:id="degree" alignment="CENTER_RIGHT" layoutX="57.0" layoutY="57.0" prefHeight="63.0" prefWidth="61.0" text="10" textFill="#eeeeee">
                      <font>
                         <Font name="Arial Bold" size="40.0" />
                      </font>
                   </Label>
-                  <Label fx:id="countryLocation" alignment="CENTER" contentDisplay="CENTER" layoutX="34.0" layoutY="115.0" prefHeight="17.0" prefWidth="105.0" />
-                  <Label fx:id="feelsLike" layoutY="144.0" prefHeight="17.0" prefWidth="90.0" text="Feels like" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="43.0" layoutY="14.0" prefHeight="17.0" prefWidth="64.0" text="TODAY" textAlignment="CENTER" />
-                  <Label fx:id="sunsetHour" layoutX="101.0" layoutY="144.0" prefHeight="17.0" prefWidth="58.0" text="Sunset" />
-                  <Label fx:id="date" alignment="CENTER" layoutX="37.0" layoutY="31.0" prefHeight="17.0" prefWidth="77.0" />
+                  <Label fx:id="countryLocation" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="119.0" prefHeight="17.0" prefWidth="105.0" textFill="#eeeeee" />
+                  <Circle fx:id="weatherIcon" fill="DODGERBLUE" layoutX="151.0" layoutY="88.0" radius="21.0" stroke="TRANSPARENT" strokeType="OUTSIDE" strokeWidth="0.0" />
                </children>
             </Pane>
          </children>
