--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/Weather-Main-Scene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/Weather-Main-Scene.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f0f8fc;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
+<BorderPane fx:id="mainApplicationLayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #f0f8fc;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
    <right>
       <Pane prefHeight="400.0" prefWidth="240.0" style="-fx-background-color: #0f173f;" BorderPane.alignment="CENTER">
          <children>
