--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/todaysOverviewLayout.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/todaysOverviewLayout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,100 +8,110 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rightAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
+<AnchorPane fx:id="rightAnchorPane" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="500.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane prefHeight="300.0" prefWidth="240.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="160.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Pane layoutX="204.0" layoutY="27.0" prefHeight="99.0" prefWidth="189.0" style="-fx-background-color: #1b1b1b; -fx-background-radius: 10;">
+            <Group layoutX="17.0">
                <children>
-                  <Pane layoutX="3.0">
+                  <Pane layoutX="9.0" layoutY="3.0" prefHeight="99.0" prefWidth="189.0" style="-fx-background-color: #1b1b1b; -fx-background-radius: 10;">
                      <children>
-                        <Label fx:id="countryLocation" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="179.0" textAlignment="CENTER" textFill="WHITE">
+                        <Pane layoutX="3.0">
+                           <children>
+                              <Label fx:id="countryLocation" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="179.0" textAlignment="CENTER" textFill="WHITE">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </Pane>
+                        <Pane layoutX="20.0" layoutY="15.0" prefHeight="74.0" prefWidth="145.0">
+                           <children>
+                              <Label fx:id="degree" alignment="CENTER" contentDisplay="CENTER" layoutX="24.0" layoutY="9.0" prefHeight="56.0" prefWidth="98.0" textAlignment="CENTER" textFill="WHITE">
+                                 <font>
+                                    <Font name="Arial Bold" size="40.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="weatherDescription" alignment="CENTER" layoutX="-10.0" layoutY="57.0" prefHeight="17.0" prefWidth="166.0" textFill="WHITE">
+                                 <font>
+                                    <Font name="Arial" size="13.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </Pane>
+                     </children>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect>
+                  </Pane>
+                  <Pane layoutX="9.0" layoutY="108.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
+                     <children>
+                        <Label fx:id="sunsetHour" layoutX="6.0" layoutY="21.0" prefHeight="42.0" prefWidth="76.0" textFill="#a300a3">
                            <font>
-                              <Font size="20.0" />
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="12.0" layoutY="6.0" text="SUNSET" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Bold" size="11.0" />
                            </font>
                         </Label>
                      </children>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect>
                   </Pane>
-                  <Pane layoutX="20.0" layoutY="15.0" prefHeight="74.0" prefWidth="145.0">
+                  <Pane layoutX="108.0" layoutY="108.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                      <children>
-                        <Label fx:id="degree" alignment="CENTER" contentDisplay="CENTER" layoutX="24.0" layoutY="9.0" prefHeight="56.0" prefWidth="98.0" textAlignment="CENTER" textFill="WHITE">
+                        <Label fx:id="feelsLike" layoutX="7.0" layoutY="21.0" prefHeight="42.0" prefWidth="76.0" textFill="#a300a3">
                            <font>
-                              <Font name="Arial Bold" size="40.0" />
+                              <Font size="16.0" />
                            </font>
                         </Label>
-                        <Label fx:id="weatherDescription" alignment="CENTER" layoutX="-10.0" layoutY="57.0" prefHeight="17.0" prefWidth="166.0" textFill="WHITE">
+                        <Label layoutX="7.0" layoutY="6.0" text="FEELS LIKE" textFill="WHITE">
                            <font>
-                              <Font name="Arial" size="13.0" />
+                              <Font name="Arial Bold" size="11.0" />
                            </font>
                         </Label>
                      </children>
+                     <effect>
+                        <DropShadow blurType="ONE_PASS_BOX" />
+                     </effect>
+                  </Pane>
+                  <Pane layoutX="9.0" layoutY="198.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
+                     <children>
+                        <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" text="SUNRISE" textAlignment="CENTER" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Bold" size="11.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="sunriseHour" layoutX="13.0" layoutY="21.0" prefHeight="42.0" prefWidth="64.0" textFill="#a300a3">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Pane>
+                  <Pane layoutX="108.0" layoutY="198.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
+                     <children>
+                        <Circle fx:id="weatherIcon" fill="DODGERBLUE" layoutX="45.0" layoutY="54.0" radius="21.0" stroke="TRANSPARENT" strokeType="OUTSIDE" strokeWidth="0.0" />
+                        <Label fx:id="mainDescription" contentDisplay="CENTER" layoutX="10.0" layoutY="7.0" prefHeight="30.0" prefWidth="70.0" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Bold" size="11.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <effect>
+                        <DropShadow />
+                     </effect>
                   </Pane>
                </children>
-               <effect>
-                  <DropShadow blurType="ONE_PASS_BOX" />
-               </effect>
-            </Pane>
-            <Label fx:id="date" alignment="CENTER" layoutX="431.0" layoutY="77.0" prefHeight="17.0" prefWidth="155.0" />
-            <Pane layoutX="204.0" layoutY="138.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
-               <children>
-                  <Label fx:id="sunsetHour" layoutX="6.0" layoutY="21.0" prefHeight="42.0" prefWidth="76.0" textFill="#a300a3">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="12.0" layoutY="6.0" text="SUNSET" textFill="WHITE">
-                     <font>
-                        <Font name="Arial Bold" size="11.0" />
-                     </font>
-                  </Label>
-               </children>
-               <effect>
-                  <DropShadow blurType="ONE_PASS_BOX" />
-               </effect>
-            </Pane>
-            <Pane layoutX="300.0" layoutY="138.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
-               <children>
-                  <Label fx:id="feelsLike" layoutX="7.0" layoutY="21.0" prefHeight="42.0" prefWidth="76.0" textFill="#a300a3">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="7.0" layoutY="6.0" text="FEELS LIKE" textFill="WHITE">
-                     <font>
-                        <Font name="Arial Bold" size="11.0" />
-                     </font>
-                  </Label>
-               </children>
-               <effect>
-                  <DropShadow blurType="ONE_PASS_BOX" />
-               </effect>
-            </Pane>
-            <Pane layoutX="204.0" layoutY="228.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
-               <children>
-                  <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" text="SUNRISE" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font name="Arial Bold" size="11.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="sunriseHour" layoutX="13.0" layoutY="27.0" prefHeight="42.0" prefWidth="64.0" textFill="#a300a3">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <Pane layoutX="300.0" layoutY="228.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
-               <children>
-                  <Circle fx:id="weatherIcon" fill="DODGERBLUE" layoutX="45.0" layoutY="54.0" radius="21.0" stroke="TRANSPARENT" strokeType="OUTSIDE" strokeWidth="0.0" />
-                  <Label fx:id="mainDescription" contentDisplay="CENTER" layoutX="10.0" layoutY="7.0" prefHeight="30.0" prefWidth="70.0" textFill="WHITE">
-                     <font>
-                        <Font name="Arial Bold" size="11.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
+            </Group>
          </children>
       </Pane>
+      <Label fx:id="date" alignment="CENTER" layoutX="238.0" layoutY="26.0" prefHeight="17.0" prefWidth="155.0" />
    </children>
 </AnchorPane>
