--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/todaysOverviewLayout.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/todaysOverviewLayout.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rightAnchorPane" prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
+<AnchorPane fx:id="rightAnchorPane" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
    <children>
       <Pane prefHeight="300.0" prefWidth="240.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="160.0" AnchorPane.topAnchor="0.0">
          <children>
             <Group layoutX="17.0">
                <children>
-                  <Pane layoutX="9.0" layoutY="3.0" prefHeight="99.0" prefWidth="189.0" style="-fx-background-color: #1b1b1b; -fx-background-radius: 10;">
+                  <Pane layoutX="9.0" prefHeight="99.0" prefWidth="189.0" style="-fx-background-color: #1b1b1b; -fx-background-radius: 10;">
                      <children>
                         <Pane layoutX="3.0">
                            <children>
@@ -46,9 +46,9 @@
                   </Pane>
                   <Pane layoutX="9.0" layoutY="108.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                      <children>
-                        <Label fx:id="sunsetHour" layoutX="6.0" layoutY="21.0" prefHeight="42.0" prefWidth="76.0" textFill="#a300a3">
+                        <Label fx:id="sunsetHour" layoutX="6.0" layoutY="21.0" prefHeight="42.0" prefWidth="56.0" textFill="#a300a3">
                            <font>
-                              <Font size="16.0" />
+                              <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
                         <Label layoutX="12.0" layoutY="6.0" text="SUNSET" textFill="WHITE">
@@ -56,6 +56,7 @@
                               <Font name="Arial Bold" size="11.0" />
                            </font>
                         </Label>
+                        <Circle fx:id="sunsetIcon" fill="DODGERBLUE" layoutX="72.0" layoutY="63.0" radius="15.0" stroke="BLACK" strokeType="INSIDE" />
                      </children>
                      <effect>
                         <DropShadow blurType="ONE_PASS_BOX" />
@@ -63,9 +64,9 @@
                   </Pane>
                   <Pane layoutX="108.0" layoutY="108.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                      <children>
-                        <Label fx:id="feelsLike" layoutX="7.0" layoutY="21.0" prefHeight="42.0" prefWidth="76.0" textFill="#a300a3">
+                        <Label fx:id="feelsLike" layoutX="7.0" layoutY="21.0" prefHeight="42.0" prefWidth="56.0" textFill="#a300a3">
                            <font>
-                              <Font size="16.0" />
+                              <Font name="Arial Bold" size="16.0" />
                            </font>
                         </Label>
                         <Label layoutX="7.0" layoutY="6.0" text="FEELS LIKE" textFill="WHITE">
@@ -85,11 +86,12 @@
                               <Font name="Arial Bold" size="11.0" />
                            </font>
                         </Label>
-                        <Label fx:id="sunriseHour" layoutX="13.0" layoutY="21.0" prefHeight="42.0" prefWidth="64.0" textFill="#a300a3">
+                        <Label fx:id="sunriseHour" layoutX="7.0" layoutY="21.0" prefHeight="42.0" prefWidth="49.0" textFill="#a300a3">
                            <font>
-                              <Font size="16.0" />
+                              <Font name="Arial" size="16.0" />
                            </font>
                         </Label>
+                        <Circle fx:id="sunriseIcon" fill="DODGERBLUE" layoutX="71.0" layoutY="63.0" radius="15.0" stroke="BLACK" strokeType="INSIDE" />
                      </children>
                      <effect>
                         <DropShadow />
@@ -97,7 +99,7 @@
                   </Pane>
                   <Pane layoutX="108.0" layoutY="198.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                      <children>
-                        <Circle fx:id="weatherIcon" fill="DODGERBLUE" layoutX="45.0" layoutY="54.0" radius="21.0" stroke="TRANSPARENT" strokeType="OUTSIDE" strokeWidth="0.0" />
+                        <Circle fx:id="weatherIcon" fill="DODGERBLUE" layoutX="45.0" layoutY="58.0" radius="21.0" stroke="TRANSPARENT" strokeType="OUTSIDE" strokeWidth="0.0" />
                         <Label fx:id="mainDescription" contentDisplay="CENTER" layoutX="10.0" layoutY="7.0" prefHeight="30.0" prefWidth="70.0" textFill="WHITE">
                            <font>
                               <Font name="Arial Bold" size="11.0" />
@@ -110,8 +112,59 @@
                   </Pane>
                </children>
             </Group>
+            <Label fx:id="date" alignment="CENTER" layoutX="43.0" layoutY="290.0" prefHeight="17.0" prefWidth="155.0" />
          </children>
       </Pane>
-      <Label fx:id="date" alignment="CENTER" layoutX="238.0" layoutY="26.0" prefHeight="17.0" prefWidth="155.0" />
+      <Pane layoutX="238.0" prefHeight="99.0" prefWidth="145.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
+         <children>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="56.0" text="Pressure" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="pressure" layoutX="14.0" layoutY="23.0" prefHeight="42.0" prefWidth="82.0" textFill="#a300a3">
+               <font>
+                  <Font name="Arial" size="16.0" />
+               </font>
+            </Label>
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Pane>
+      <Pane layoutX="238.0" layoutY="107.0" prefHeight="83.0" prefWidth="145.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
+         <children>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="56.0" text="Humidity" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="humidity" layoutX="14.0" layoutY="21.0" prefHeight="42.0" prefWidth="56.0" textFill="#a300a3">
+               <font>
+                  <Font name="Arial" size="16.0" />
+               </font>
+            </Label>
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Pane>
+      <Pane layoutX="238.0" layoutY="196.0" prefHeight="83.0" prefWidth="145.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
+         <children>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="56.0" text="Visibility" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="visibility" layoutX="14.0" layoutY="21.0" prefHeight="42.0" prefWidth="82.0" textFill="#a300a3">
+               <font>
+                  <Font name="Arial" size="16.0" />
+               </font>
+            </Label>
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Pane>
    </children>
 </AnchorPane>
