--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/newsScene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/newsScene.fxml
@@ -1,18 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="215.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.NewsReportsController">
    <children>
       <VBox prefHeight="400.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Rectangle fx:id="mainImageArticle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="120.0" stroke="BLACK" strokeType="INSIDE" width="200.0">
+            <Label prefHeight="32.0" prefWidth="128.0" text="BREAKING NEWS">
+               <font>
+                  <Font name="Arial Bold" size="14.0" />
+               </font>
+            </Label>
+            <Rectangle fx:id="mainImageArticle" arcHeight="20.0" arcWidth="20.0" fill="DODGERBLUE" height="120.0" stroke="BLACK" strokeType="INSIDE" width="200.0">
                <effect>
                   <DropShadow />
                </effect></Rectangle>
+            <Label alignment="BOTTOM_LEFT" prefHeight="25.0" prefWidth="80.0" text="Description: ">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="textDescription" alignment="TOP_LEFT" prefHeight="84.0" prefWidth="200.0" wrapText="true">
+               <font>
+                  <Font name="Arial" size="13.0" />
+               </font>
+            </Label>
+            <HBox>
+               <children>
+                  <Label alignment="BOTTOM_RIGHT" prefHeight="18.0" prefWidth="42.0" text="Source:" />
+                  <Label fx:id="sourceLink" alignment="BOTTOM_LEFT" prefHeight="18.0" prefWidth="150.0" />
+               </children>
+            </HBox>
+            <HBox>
+               <children>
+                  <Button fx:id="previousArticle" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" style="-fx-background-radius: 5;" text="Previous" />
+                  <Label fx:id="pageIndex" alignment="CENTER" prefHeight="25.0" prefWidth="67.0" textAlignment="CENTER" />
+                  <Button fx:id="nextArticle" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" style="-fx-background-radius: 5px;" text="Next" />
+               </children>
+            </HBox>
          </children>
       </VBox>
    </children>
