--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/newsScene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/newsScene.fxml
@@ -3,49 +3,76 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="215.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.NewsReportsController">
+
+<Pane fx:id="newsPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.NewsReportsController">
    <children>
-      <VBox prefHeight="400.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="391.0" prefWidth="431.0">
          <children>
-            <Label prefHeight="32.0" prefWidth="128.0" text="BREAKING NEWS">
+            <Label alignment="CENTER" prefHeight="32.0" prefWidth="331.0" text="BREAKING NEWS">
                <font>
-                  <Font name="Arial Bold" size="14.0" />
-               </font>
-            </Label>
-            <Rectangle fx:id="mainImageArticle" arcHeight="20.0" arcWidth="20.0" fill="DODGERBLUE" height="120.0" stroke="BLACK" strokeType="INSIDE" width="200.0">
-               <effect>
-                  <DropShadow />
-               </effect></Rectangle>
-            <Label alignment="BOTTOM_LEFT" prefHeight="25.0" prefWidth="80.0" text="Description: ">
-               <font>
-                  <Font name="Arial Bold" size="13.0" />
-               </font>
-            </Label>
-            <Label fx:id="textDescription" alignment="TOP_LEFT" prefHeight="84.0" prefWidth="200.0" wrapText="true">
-               <font>
-                  <Font name="Arial" size="13.0" />
+                  <Font name="Arial Bold" size="20.0" />
                </font>
             </Label>
             <HBox>
                <children>
-                  <Label alignment="BOTTOM_RIGHT" prefHeight="18.0" prefWidth="42.0" text="Source:" />
-                  <Label fx:id="sourceLink" alignment="BOTTOM_LEFT" prefHeight="18.0" prefWidth="150.0" />
+                  <Label alignment="TOP_LEFT" prefHeight="17.0" prefWidth="79.0" />
+                  <Rectangle fx:id="mainImageArticle" arcHeight="20.0" arcWidth="20.0" fill="DODGERBLUE" height="157.0" stroke="BLACK" strokeType="INSIDE" width="353.0">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Rectangle>
                </children>
             </HBox>
             <HBox>
                <children>
-                  <Button fx:id="previousArticle" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" style="-fx-background-radius: 5;" text="Previous" />
+                  <Label prefHeight="17.0" prefWidth="77.0" />
+                  <Label alignment="BOTTOM_LEFT" contentDisplay="CENTER" prefHeight="29.0" prefWidth="354.0" text="Description: " wrapText="true">
+                     <font>
+                        <Font name="Arial Bold" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox>
+               <children>
+                  <Label prefHeight="17.0" prefWidth="80.0" />
+                  <Label fx:id="textDescription" alignment="TOP_LEFT" contentDisplay="CENTER" prefHeight="97.0" prefWidth="351.0" wrapText="true">
+                     <font>
+                        <Font name="Arial" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox prefHeight="26.0" prefWidth="200.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="76.0" />
+                  <Label alignment="BOTTOM_RIGHT" prefHeight="18.0" prefWidth="42.0" text="Source:" />
+                  <Label fx:id="sourceLink" alignment="BOTTOM_LEFT" prefHeight="18.0" prefWidth="313.0" wrapText="true" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="84.0" />
+                  <Button fx:id="previousArticle" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" style="-fx-background-radius: 5; -fx-background-color: #1b1b1b;" text="Previous" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="13.0" />
+                     </font>
+                  </Button>
                   <Label fx:id="pageIndex" alignment="CENTER" prefHeight="25.0" prefWidth="67.0" textAlignment="CENTER" />
-                  <Button fx:id="nextArticle" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" style="-fx-background-radius: 5px;" text="Next" />
+                  <Button fx:id="nextArticle" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" style="-fx-background-radius: 5px; -fx-background-color: #1b1b1b;" text="Next" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="13.0" />
+                     </font>
+                  </Button>
                </children>
             </HBox>
          </children>
       </VBox>
    </children>
-</AnchorPane>
+</Pane>
