--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/MainScene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/MainScene.fxml
@@ -2,4 +2,16 @@
 
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="mainApplicationLayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #f0f8fc;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.MainSkeletonController" />
+<BorderPane fx:id="mainApplicationLayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #f0f8fc;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.weatherreport.weatherreport.controllers.MainController" >
+
+    <top>
+        <fx:include source="SearchBar-Scene.fxml"/>
+    </top>
+    <center>
+        <fx:include source="todaysOverviewLayout.fxml"/>
+    </center>
+<left>
+    <fx:include source="menuNavigator.fxml"/>
+</left>
+</BorderPane>
