--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/newsScene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/newsScene.fxml
@@ -59,7 +59,7 @@
             <HBox alignment="CENTER">
                <children>
                   <Label prefHeight="17.0" prefWidth="84.0" />
-                  <Button fx:id="previousArticle" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" style="-fx-background-radius: 5; -fx-background-color: #1b1b1b;" text="Previous" textFill="WHITE">
+                  <Button fx:id="previousArticle" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" style="-fx-background-radius: 5; -fx-background-color: #1b1b1b;" text="Previous" textFill="WHITE" visible="false">
                      <font>
                         <Font name="Arial Bold" size="13.0" />
                      </font>
