--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/SearchBar-Scene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/SearchBar-Scene.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -14,7 +17,23 @@
                   <Font name="Arial Italic" size="11.0" />
                </font>
             </TextField>
-            <Pane prefHeight="42.0" prefWidth="150.0" style="-fx-background-color: #1b1b1b;" />
+            <Pane prefHeight="42.0" prefWidth="150.0" style="-fx-background-color: #1b1b1b;">
+               <children>
+                  <MenuBar layoutX="-6.0" layoutY="7.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="35.0" prefWidth="156.0">
+                    <menus>
+                      <Menu mnemonicParsing="false" text="Options">
+                        <items>
+                          <MenuItem fx:id="closeApplicationButton" mnemonicParsing="false" text="Close" />
+                        </items>
+                      </Menu>
+                      <Menu mnemonicParsing="false" text="Help">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="About" />
+                        </items>
+                      </Menu>
+                    </menus>
+                  </MenuBar>
+               </children></Pane>
          </children>
       </Pane>
    </children>
