--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/fxml/QuotesEditor.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/fxml/QuotesEditor.fxml
@@ -36,7 +36,7 @@
             </HBox>
          </children>
       </AnchorPane>
-      <HBox alignment="CENTER" layoutX="128.0" layoutY="373.0" prefHeight="30.0" prefWidth="345.0" style="-fx-spacing: 5;">
+      <HBox fx:id="optionBar" alignment="CENTER" layoutX="128.0" layoutY="373.0" prefHeight="30.0" prefWidth="345.0" style="-fx-spacing: 5;">
          <children>
             <Label text="Text" textFill="#e1e1e1">
                <font>
@@ -49,8 +49,8 @@
                </value>
             </ColorPicker>
             <Button fx:id="generateQuote" contentDisplay="CENTER" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" style="-fx-background-radius: 4;" text="Generate" />
-            <Button fx:id="saveButton" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" style="-fx-background-radius: 4;" text="Save" />
-            <Button fx:id="shareButton" alignment="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Share" />
+            <Button fx:id="saveButton" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" style="-fx-background-radius: 4;" text="Save" visible="false" />
+            <Button fx:id="shareButton" alignment="CENTER" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Share" visible="false" />
          </children>
       </HBox>
    </children>
